<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BloodPressureActivity">


    <TextView
        android:id="@+id/titleBlood"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:paddingStart="10dp"
        android:text="Add Blood Pressure"
        android:textColor="@color/dark_gray"
        android:textSize="25sp"
        android:drawableEnd="@drawable/ic_blood_pressure"
        android:paddingEnd="80dp"
        android:drawableTint="@color/colorPrimary"
        android:background="@drawable/background_item"
        android:textStyle="bold" />


    <RelativeLayout
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="20dp">


        <TextView
            android:id="@+id/systolicTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Systolic"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/diastolicTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Diastolic"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/dark_gray"
            android:layout_toRightOf="@+id/systolicEdit"/>



        <AutoCompleteTextView
            android:id="@+id/systolicEdit"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/systolicTitle"
            android:padding="5dp"
            android:hint="0"
            android:layout_marginTop="10dp"
            android:inputType="number|textNoSuggestions"
            android:background="@drawable/backgound_stoke"/>


        <AutoCompleteTextView
            android:id="@+id/diastolicEdit"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/backgound_stoke"
            android:padding="5dp"
            android:hint="0"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/diastolicTitle"
            android:inputType="number|textNoSuggestions"
            android:layout_alignStart="@+id/diastolicTitle"/>





    </RelativeLayout>



    <Button
        android:id="@+id/saveBloodPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/background_item"
        android:backgroundTint="@color/colorPrimary"
        android:layout_below="@id/numberPicker"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>