<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_pane_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/backDaily"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/oval_background"
        android:backgroundTint="@color/transparentblack"
        android:drawableStart="@drawable/ic_back"
        android:drawableTint="@color/white"
        android:gravity="center"
        android:paddingStart="10dp" />


    <TextView
        android:id="@+id/bpDailyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backDaily"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="Blood Pressure on"
        android:textSize="20sp"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/dateDaily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bpDailyTitle"
        android:layout_marginStart="10dp"
        android:text="24 October 2019"
        android:textSize="15sp"
        android:textStyle="bold" />


    <RelativeLayout
        android:id="@+id/relativeDaily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateDaily"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/bpDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/chooserbackground"
            android:onClick="chartShow"
            android:padding="10dp"
            android:text="Blood Pressure"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/waterDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/bpDaily"
            android:background="@drawable/chooserbackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="chartShow"
            android:padding="10dp"
            android:text="Water Taken"
            android:textSize="10sp"

            android:textStyle="bold" />

        <TextView
            android:id="@+id/tempDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bpDaily"
            android:layout_marginTop="5dp"
            android:background="@drawable/chooserbackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="chartShow"
            android:padding="10dp"
            android:text="Temperature"

            android:textSize="10sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/sugarDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/waterDaily"
            android:layout_alignStart="@+id/waterDaily"
            android:layout_marginTop="5dp"
            android:background="@drawable/chooserbackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="chartShow"
            android:padding="10dp"
            android:text="Sugar Level"

            android:textSize="10sp"
            android:textStyle="bold" />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/valueLinear"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_below="@+id/relativeDaily"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:visibility="visible">

        <com.txusballesteros.widgets.FitChart
            android:id="@+id/fitvalue"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="100pt"
            app:backStrokeColor="@color/lighgray"
            app:valueStrokeColor="#284946" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bplinearfit"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/valuefitText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:gravity="end"
                android:text="Value:"
                android:textColor="@color/dark_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valuefit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingStart="5dp"
                android:text="0"
                android:textColor="@color/dark_gray"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>


    <RelativeLayout
        android:id="@+id/fitRelative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:visibility="gone"
        android:layout_below="@id/relativeDaily">


        <LinearLayout
            android:id="@+id/bplinearfit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:paddingTop="100dp">

            <com.txusballesteros.widgets.FitChart
                android:id="@+id/fitsys"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:backStrokeColor="@color/lighgray"
                app:valueStrokeColor="#084F6F" />

            <com.txusballesteros.widgets.FitChart
                android:id="@+id/fitdia"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:backStrokeColor="@color/lighgray"

                app:valueStrokeColor="#CC2020" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/bptext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bplinearfit"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Systolic"
                android:textColor="@color/dark_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/systolicChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:text="0/68"
                android:visibility="gone"
                android:textColor="@color/dark_gray"
                android:textStyle="bold" />


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Diastolic"
                android:textColor="@color/dark_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/diastolicChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:text="0/198"
                android:visibility="gone"
                android:textColor="@color/dark_gray"
                android:textStyle="bold" />


        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>

















































