<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_weekly"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HealthWeeklyActivity">


    <TextView
        android:id="@+id/backWeek"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/oval_background"
        android:backgroundTint="@color/transparentblack"
        android:drawableStart="@drawable/ic_back"
        android:drawableTint="@color/white"
        android:gravity="center"
        android:layout_margin="10dp"
        android:paddingStart="10dp" />
    <TextView
        android:id="@+id/bpDailyWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backWeek"
        android:text="Blood Pressure"
        android:layout_marginStart="20sp"
        android:textSize="20sp"

        android:textStyle="bold" />
    <RelativeLayout
        android:id="@+id/relativeWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bpDailyWeek"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/bpWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/chooserbackground"
            android:onClick="chartShowWeek"
            android:padding="10dp"
            android:text="Blood Pressure"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/waterWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/bpWeek"
            android:background="@drawable/chooserbackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="chartShowWeek"
            android:padding="10dp"
            android:text="Water Taken"
            android:textSize="10sp"

            android:textStyle="bold" />

        <TextView
            android:id="@+id/tempWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bpWeek"
            android:layout_marginTop="5dp"
            android:background="@drawable/chooserbackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="chartShowWeek"
            android:padding="10dp"
            android:text="Temperature"

            android:textSize="10sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/sugarWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/waterWeek"
            android:layout_alignStart="@+id/waterWeek"
            android:layout_marginTop="5dp"
            android:background="@drawable/chooserbackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="chartShowWeek"
            android:padding="10dp"
            android:text="Sugar Level"
            android:textSize="10sp"
            android:textStyle="bold"


            />


    </RelativeLayout>





    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relativeWeek">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/colorIndexWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chartWeek"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/systolicColor"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/oval_background"
                    android:backgroundTint="@color/black"
                    android:layout_marginTop="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/systolicColor"
                    android:text="Systolic"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    />

                <TextView
                    android:id="@+id/diastolicColor"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_below="@+id/systolicColor"
                    android:background="@drawable/oval_background"
                    android:backgroundTint="#3F51B5"

                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/systolicColor"
                    android:layout_below="@+id/systolicColor"
                    android:text="Diastolic"
                    android:textStyle="bold"
                    android:textColor="#3F51B5"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    />

            </RelativeLayout>




            <com.jjoe64.graphview.GraphView
                android:id="@+id/chartWeek"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                />




        </RelativeLayout>




    </ScrollView>





</RelativeLayout>